- The file logger writes the logfile right after the analysis is
  complete.
- Change: Some internal renaming.
- Change: Removed the constants analysis configuration.
- Change: Moved the bootstrapping to it's own file.
- Change: Removed the annoying spaces from the generated DOM, for
  better copy-paste.
- Change: Resorted the settings.
- Change: Prettified the output of the Hans skin.
- Bugfix: The position of the search field of the hans skin is now
  calculated correct when the viewport is not on top.
- Bugfix: The scroll container detection of the hans skin works
  now.
- Bugfix: Added help text for the arrayCountLimit.
- Bugfix: "Resolving" of unresolvable inherited comment parts work
  now as expected.
- Bugfix: Prevent the registering of multiple fatal error handlers.
- Bugfix: Minimise interference with strange CSS styles.
- Bugfix: Do not render an unresolvable method analysis recursion
  when there are no methods to analyse in that specific class.
- Bugfix: The file service can now read the bottom of file more
  reliably.
- Bugfix: Prevent code generation for explicitly forbidden paths,
  when the recursion resolving is copying the original analysis
  into the forbidden path (try to say this fast and 4 times in a
  row).
- Bugfix: Removing of message keys should work again.
- Bugfix: Duplicate messages will not be displayed anymore.
- Bugfix: Fixed a possible fatal, when trying to analyse dynamically
  declared properties, which have a name collusion with private
  properties somewhere deeper in the class inheritance.
- Bugfix: Detect unset properties in classes.
- Bugfix: Added closing style tags to both skins
- Bugfix: Catch throwable in PHP 7.
- Bugfix: Removed the anoying speces from the hans template, so
  people can copy stuff better from the output.
- Bugfix: Added 'Krexx' with a capital 'K' to the caller finder
  pattern.
- Bugfix: Prevent a possible fatal when analysing methods or
  closures, and the typehinted class for this parameter does not