@@ -80,3 +80,5 @@ currentConfig = "Current configuration"
 iniNotFound = "Krexx.ini not found, using factory settings"
 chunksNotWritable = "Chunksfolder %s is not writable! This will increase the memory usage of kreXX significantly!"
 logNotWritable = "Logfolder %s is not writable !"
+fileinfoNotInstalled = "The php extension 'fileinfo' is not installed. The mime type analysis is not available."
+mbstringNotInstalled = "The php extension 'mb-string' is not installed. The string analysis may be unreliable."
