@@ -1,1 +1,1 @@
-<span> | (<em class="ktype">Callback: {normal}();</em>)</span>
+<em class="ktype callback">(Callback: {normal}();)</em>
